style(ai): 枚举与过滤器改用Lombok注解简化getter/setter